ephy-history-service: fix a few leaks

If there is an error processing the statement, then unref it before
returning.

https://bugzilla.gnome.org/show_bug.cgi?id=683475